[tool.poetry]
name = "pythings"
version = "0.1.0"
description = ""
authors = ["Vivaan Verma <vivaan.verma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
