[tool.poetry]
name = "pythings"
version = "0.1.0"
description = ""
authors = ["Vivaan Verma <vivaan.verma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
start = "poetry run python -m pythings"
precommit = "pre-commit install"
precommit-run = "pre-commit run --all-files"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
